# pytest-tap

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  appveyor.yml  codecov.yml  conftest.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  transifex.py
.github/: contributing.md  pull_request_template.md
.github/workflows/: tests.yml
docs/: releases.rst
pytest_tap/: __init__.py  i18n.py  plugin.py
pytest_tap/locale/: pytest_tap.pot
pytest_tap/locale/de/LC_MESSAGES/: pytest_tap.po
pytest_tap/locale/es/LC_MESSAGES/: pytest_tap.po
pytest_tap/locale/ja/LC_MESSAGES/: pytest_tap.po
pytest_tap/locale/pt/LC_MESSAGES/: pytest_tap.po
pytest_tap/locale/zh/LC_MESSAGES/: pytest_tap.po
pytest_tap/tests/: __init__.py  test_plugin.py
src/pytest_tap/: __init__.py  i18n.py  plugin.py
src/pytest_tap/locale/: pytest_tap.pot
src/pytest_tap/locale/ar/LC_MESSAGES/: pytest_tap.po
src/pytest_tap/locale/es/LC_MESSAGES/: pytest_tap.po
src/pytest_tap/locale/fr/LC_MESSAGES/: pytest_tap.po
src/pytest_tap/locale/it/LC_MESSAGES/: pytest_tap.po
src/pytest_tap/locale/nl/LC_MESSAGES/: pytest_tap.po
src/pytest_tap/locale/ru/LC_MESSAGES/: pytest_tap.po
tests/: __init__.py  test_help.py  test_plugin.py  test_subtests.py  test_xdist.py
