[bumpversion]
current_version = 2.4
tag = True
parse = (?P<major>\d+)\.(?P<minor>\d+)
serialize = {major}.{minor}

[bdist_wheel]
universal = 1

[bumpversion:file:setup.py]

[bumpversion:file:src/pytest_tap/__init__.py]

[compile_catalog]
domain = pytest_tap
directory = pytest_tap/locale

[extract_messages]
input_dirs = pytest_tap
output_file = pytest_tap/locale/pytest_tap.pot
copyright_holder = Matt Layman

[metadata]
license-file = LICENSE

[flake8]
max-line-length = 88

